        in the GL engine when using EGL/OpenGL-ES2
        * Fix SVG loader 2 phase loader having differing scale down code
        for first and 2nd phase. Resulted in crash when loading some SVGs

2011-05-11 Tom Hacohen (TAsn)

	* Textblock: Added evas_textblock_node_format_list_get. This is very
	  useful for edje_entry that uses anchors in the text.

2011-05-12  Carsten Haitzler (The Rasterman)

	* Add smart instance usage count get function for ability to free
        data from memory from a smart class if needed.

2011-05-12 Brian Wang

	* Textblock: fix segfault with evas_textblock_cursor_content_get

2011-05-12  Carsten Haitzler (The Rasterman)

	* Add a smart "Grid" layout object that lays out objects in a regular
        "virtual resolution" grid (eg 100x100) so you can lay them out
        as a "scaled percentage" of the virtual resolution. virtual
        resolution is defineable as is the geometry of each member.

2011-05-18  Sung W. Park

	* Fix some internal stencil and depth requests for OpenGL-ES2
        due to OpenGL-ES limitations.
        * Fix Surface recreation for FBO in Evas GL support.

2011-05-23  Vincent Torri

	* Fix compilation with libjpeg 8 on Windows.

2011-05-24  Cedric Bail

	* Use Eina_File when possible.

2011-05-26  Carsten Haitzler (The Rasterman)

	* Fix Evas table to handle weighting correctly for items and veto
        rows or columns that have any child spanning that column not
        able to expand.
        * Fix Evas table to use actual fractional weights, not just
        boolean expand/not expand from weight value.

2011-05-27  Carsten Haitzler (The Rasterman)

	* Add evas_event_thaw_eval() for conveneince of evaluating in state
        and callbacks of the pointer after a thaw is complete.

2011-05-29  Tom Hacohen (TAsn)

	* Font-engine: Fixed a bug in glyph search causing inconsistent return
	  values. The found fi should always be NULL if there was no fi found.
